--- a/cardstack/style.css
+++ b/cardstack/style.css
@@ -1135,3 +1135,18 @@ address {
     max-width: 100%;
 }
 
+/*temporary styles*/
+
+.container {
+    position: relative;
+}
+
+.image-text {
+    text-align: center;
+    position: absolute;
+    top: 0px;
+    width: 100%;
+    background-color: rgb(0, 0, 0, 0.6);
+    color: white;
+    padding-top: 10px;
+}
