--- a/cardstack/page-welcome-style.css
+++ b/cardstack/page-welcome-style.css
@@ -1,4 +1,7 @@
 .container {
+    display: flex;
+    flex-direction: column;
+    align-content: flex-end;
     position: relative;
     margin: 0;
     overflow: hidden;
@@ -7,11 +10,10 @@
 .image-text {
     text-align: center;
     position: absolute;
-    top: 0px;
+    bottom: 0;
     width: 100%;
     background-color: rgb(0, 0, 0, 0.6);
     color: white;
-    padding-top: 10px;
 }
 
 .aside {
@@ -28,10 +30,24 @@
 }
 
 .mmenuitem {
-    margin: 0;
+    margin: 20px 0;
     flex-basis: 33%;
-    display: inline;
     text-align: center;
     font-weight: 800;
-    padding-top: 15px;
+    list-style-type: none;
+}
+
+@media(max-width: 960px) {
+    .mmenuitem {
+        margin: 20px 0 0 0;
+    }
+
+    .mmenuitem:last-child {
+        margin: 20px 0 20px 0;
+    }
+
+    .icon-container {
+        flex-direction: column;
+    }
+
 }
