--- a/cardstack/style.css
+++ b/cardstack/style.css
@@ -14,7 +14,7 @@ Licensed under the GNU General Public License, version 2 or any later version. S
 
 @font-face {
     font-family: 'Source Sans Pro Regular';
-    src: url('./SourceSansPro-Regular.otf');
+    src: url('./SourceSansPro-Regular.ttf');
 }
 
 @font-face {
@@ -58,7 +58,7 @@ body {
 h1, h2, h3, h4, h5, h6, p.demoted-title {
     font-family: "Source Sans Pro Regular", sans-serif;
     letter-spacing: -0.02em;
-    font-weight: 400;
+    font-weight: ;
 }
 
 h1, p.demoted-title {
