--- a/cardstack/style.css
+++ b/cardstack/style.css
@@ -58,7 +58,7 @@ body {
 h1, h2, h3, h4, h5, h6, p.demoted-title {
     font-family: "Source Sans Pro Regular", sans-serif;
     letter-spacing: -0.02em;
-    font-weight: ;
+    font-weight: 400;
 }
 
 h1, p.demoted-title {
