--- a/cardstack/style.css
+++ b/cardstack/style.css
@@ -37,15 +37,13 @@ img, table, tr, th, td, dl, dt, dd, address, pre {
 a {
     font-family: "Open Sans Semibold", sans-serif;
     text-decoration: inherit;
-    color: #41669E;
-    font-weight: bold;
     color: #00579a;
 }
 
 html {
     font-family: "Open Sans Regular", sans-serif;
     font-size: 15px;
-    color: #333;
+    color: #202020;
     overflow-x: hidden;
 }
 
@@ -57,54 +55,50 @@ body {
 
 h1, h2, h3, h4, h5, h6, p.demoted-title {
     font-family: "Source Sans Pro Regular", sans-serif;
+    font-weight: normal;
     letter-spacing: -0.02em;
-    font-weight: 400;
 }
 
 h1, p.demoted-title {
     margin-bottom: 0.45rem;
     text-align: left;
-    font-size: 1.4rem;
+    font-size: 1.7rem;
 }
 
 h2 {
     margin-bottom: 0.4rem;
-    letter-spacing: 0.02em;
-    color: #404040;
+    letter-spacing: -0.01em;
     text-align: left;
-    font-size: 1.3rem;
+    font-size: 1.5rem;
 }
 
 h3 {
     margin-bottom: 0.35rem;
-    letter-spacing: 0.02em;
-    color: #404040;
+    letter-spacing: -0.01em;
     text-align: left;
-    font-size: 1.25rem;
+    font-size: 1.3rem;
 }
 
 h4 {
     margin-bottom: 0.3rem;
-    letter-spacing: 0.02em;
-    color: #404040;
+    letter-spacing: -0.01em;
     text-align: left;
-    font-size: 1.2rem;
+    font-size: 1.1rem;
 }
 
 h5 {
     margin-bottom: 0.25rem;
-    letter-spacing: 0.02em;
-    color: #404040;
+    letter-spacing: -0.01em;
     text-align: left;
-    font-size: 1.15rem;
+    font-size: 1.1rem;
 }
 
 h6 {
     margin-bottom: 0.2rem;
-    letter-spacing: 0.02em;
+    letter-spacing: -0.01em;
     color: #646464;
     text-align: left;
-    font-size: 1.11rem;
+    font-size: 1.1rem;
 }
 
 .post-title {
@@ -297,6 +291,10 @@ article.page>h1:not(:first-of-type), article.page>h2, article.page>h3, article.p
     margin-top: 18px;
 }
 
+article.page>h3, article.page>h4, article.page>h5, article.page>h6 {
+    margin-top: 15px;
+}
+
 article>p>img:not(.alignleft):not(.alignright):first-child, article>p>a:first-child>img:not(.alignleft):not(.alignright):first-child {
     margin-top: 12px;
 }
@@ -481,7 +479,6 @@ ol.commentlist div.comment-meta.commentmetadata {
 header#header-main {
     width: 100%;
     padding-bottom: 12px;
-    color: #333;
     box-shadow: 0 2px 1px #ccc;
     position: relative;
 }
@@ -493,7 +490,6 @@ header#header-main {
     padding: 0 14px;
     font-size: 1.7rem;
     line-height: 1.2;
-    letter-spacing: 0.01em;
 }
 
 #site-description {
@@ -620,6 +616,10 @@ nav#nav-main #m1:target ~ ul, nav#nav-main #m1:target ~ ul > li {
 
 nav#nav-main > ul > li > a {
     white-space: nowrap;
+}
+
+nav#nav-main a {
+    font-family: inherit;
 }
 
 nav#nav-main > ul a {
@@ -791,7 +791,7 @@ main>article {
     margin: 0 auto 40px auto;
     line-height: 1.5;
     background-color: white;
-    box-shadow: 0 2px 1px #ccc;
+    box-shadow: 0 2px 2px #ccc;
 }
 
 main > article::after {
