--- a/cardstack/page-welcome-style.css
+++ b/cardstack/page-welcome-style.css
@@ -1,4 +1,4 @@
-.container {
+.series-banner {
     display: flex;
     flex-direction: column;
     align-content: flex-end;
@@ -7,19 +7,37 @@
     overflow: hidden;
 }
 
+a.banner-link {
+    color: inherit;
+    font: inherit;
+    line-height: 1;
+}
+
 .image-text {
     text-align: center;
     position: absolute;
     bottom: 0;
     width: 100%;
-    background-color: rgb(0, 0, 0, 0.6);
+    background-color: rgba(0, 0, 0, 0.6);
     color: white;
+    line-height: 1.15;
+    box-sizing: border-box;
+    padding: 12px;
+}
+
+.image-text span.banner-cta {
+    font-family: "Open Sans Semibold";
+    color: #dadaff;
+}
+
+.series-banner:hover .image-text span.banner-cta {
+    color: #fff;
 }
 
 .aside {
     margin: 0 auto 40px auto;
     max-width: 960px;
-    box-shadow: 0 2px 1px #ccc;
+    box-shadow: 0 2px 2px #ccc;
     background-color: white;
 }
 
